<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Delegator</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">freeuni.android.delegator.PREFERENCE_FILE_KEY</string>
    
    <!-- Shared Preference keys -->
    <string name="active_session_username">active_session_username</string>
    
    <!-- Login activity -->
	<string name="la_login_button">Sign in</string>
	<string name="la_user_name_hint">Username</string>
	<string name="la_password_hint">Password</string>
	<string name="la_wrong_pass_or_name">Check your username or password</string>
	
	<!-- Home activity -->
	
	<!-- Subordinate activity -->
	<string name="invalid_number">Invalid phone number</string>
	
	<!-- Menu -->
	<string name="sign_out">Sign out</string>
	<string name="refresh">Refresh</string>
	<string name="search">Search</string>
	<string name="add_task">Add</string>
	<string name="edit_task">Edit</string>
	<string name="create_group">Create group</string>
	<string name="save_task">Save</string>
	<string name="delete_task">Delete</string>
	<string name="save_settings">Save</string>
	<string name="hide_closed">Hide closed</string>
	<string name="show_all">Show all</string>
	<string name="sort_by_priority">Sort by priority</string>
	<string name="sort_by_Date">Sort by due date</string>
	
	<!-- Navigation Drawable -->
	<string name="navigation_subordinates">Subordinates</string>
	<string name="navigation_home">My Tasks</string>
	<string name="navigation_groups">Groups</string>
	<string name="navigation_settings">Settings</string>
	<string name="navigation_home_img_content_description">navigation home</string>
	<string name="navigation_subordinates_img_content_description">navigation groups</string>
	<string name="navigation_groups_img_content_description">navigation subordinates</string>
	<string name="navigation_settings_img_content_description">navigation settings</string>
	<string name="navigation_profile_image_content_description">profile image</string>
	<string name="drawer_open">open drawer</string>
	<string name="drawer_close">close drawers</string>
	
	<!-- List strings -->
	<string name="subortinate_avatar_descrip">Subordinate avatar</string>
	<string name="subordinate_current_task_desc">current tasks</string>
	<string name="assignee_assigner_desc">Who I gave, or gave me</string>
	<string name="subordinate_call_desc">Call</string>
	
	<!-- Task Activity -->
	<string name="task_default_title">New task</string>
	<string name="task_saved">Task saved successfully</string>
	
	<!-- Task Layout -->
	<string name="task_title_hint">Title</string>
	<string name="task_description_hint">Description</string>
	<string name="seek_bar_name">Completion:</string>
	<string name="priority_bar_name">Priority:</string>
	<string name="seek_bar_percent">%</string>
	<string name="set_deadline_button">Set Deadline</string>
	<string name="reporter">Reporter: </string>
	
	<!-- Group naming -->
	<string name="group_name_hint">Group name</string>
	<string name="group_naming_button_name">Submit</string>
	<string name="group_naming_desc">Naming created group</string>
	
	<!-- Profile Settings -->
	<string name="update_avatar_txt">Update Avatar</string>
	<string name="tel_num">Telephone Number</string>
	<string name="new_tel_num_hint">Enter new telephone number here...</string>
	<string name="update_pass">Update Password</string>
	<string name="new_pass_hint">Enter new password here...</string>
	
	
	<!-- 
	<string-array name="statuses">
        <item>Not Started</item>
        <item>In Progress</item>
        <item>Waiting for someone Else</item>
        <item>Completed</item>
        <item>Canceled</item>
    </string-array>
	 -->
</resources>
