<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

	<item android:id="@+id/action_search"
       android:title="@string/search"
       android:icon="@android:drawable/ic_menu_search"
       android:showAsAction="always"
       android:actionViewClass="android.widget.SearchView" />

	<item android:id="@+id/add_task"
  	    android:title="@string/add_task"
  	   	android:icon="@drawable/ic_action_new"
  	    android:showAsAction="ifRoom"
  	    android:onClick="addNewTask"/>
    <item android:id="@+id/hide_closed_tasks"
        android:title="@string/hide_closed"
        android:onClick="hideClosedTasks"
        android:enabled="false"
        />
    <item android:id="@+id/show_all_tasks"
        android:title="@string/show_all"
        android:onClick="showAllTasks"
        />
    <item android:id="@+id/sort_by_priority"
        android:title="@string/sort_by_priority"
        android:onClick="sortByPriority"
        />
    <item android:id="@+id/sort_by_date"
        android:title="@string/sort_by_Date"
        android:onClick="sortByDueDate"
        />
    <item
	    android:id="@+id/refresh"
  	    android:title="@string/refresh"
  	    android:showAsAction="never"
  	    android:onClick="onRefresh"/>
</menu>
