<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/avatarSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="100dp"
            android:maxWidth="100dp"
            android:scaleType="fitCenter"
            android:src="@drawable/default_user_image" >
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" 
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/userNameSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="@dimen/settings_avatar"
                android:textStyle="bold" >
            </TextView>

            <Button
                android:id="@+id/browsePictureBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="onBrowseButtonClick"
                android:text="@string/update_avatar_txt" >
            </Button>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tel_num"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newTel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_tel_num_hint" />"

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/update_pass"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/new_pass_hint"
        android:inputType="textPassword" />

</LinearLayout>