<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey" >

    <EditText
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/la_user_name_hint"
        />
	<requestFocus />
    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/user_name"
        android:layout_alignRight="@id/user_name"
        android:layout_below="@id/user_name"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/la_password_hint"
        >

    </EditText>

    <Button
        android:id="@+id/submit_credentials"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:layout_below="@id/password"
        android:layout_marginTop="31dp"
        android:onClick="submitAuthentication"
        android:text="@string/la_login_button" />

</RelativeLayout>
