<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <ViewStub
        android:id="@+id/layout_stub"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inflatedId="@+id/content" />
    <!-- The navigation drawer -->

    <LinearLayout
        android:id="@+id/left_drawer"
        android:layout_width="@dimen/navigation_drawable_width"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/light_grey"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/profile_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/navigation_line_margins"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:contentDescription="@string/navigation_profile_image_content_description"
                android:src="@drawable/me" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/navigation_margin_to_image"
                android:textColor="@color/dark_grey"
                android:textSize="@dimen/username_name_size" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list_separator"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/nav_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/navigation_line_margins"
            android:onClick="goHome"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/nav_home_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigation_home_img_content_description"
                android:src="@drawable/ic_action_view_as_list" />

            <TextView
                android:id="@+id/nav_home_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/navigation_margin_to_image"
                android:text="@string/navigation_home"
                android:textColor="@color/dark_grey" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list_separator"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/nav_subordinates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/navigation_line_margins"
            android:onClick="showSubordinates"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/nav_subordinates_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigation_subordinates_img_content_description"
                android:src="@drawable/ic_action_person" />

            <TextView
                android:id="@+id/nav_subordiantes_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/navigation_margin_to_image"
                android:text="@string/navigation_subordinates"
                android:textColor="@color/dark_grey" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list_separator"
            android:background="@color/grey" />

        <LinearLayout
            android:id="@+id/nav_groups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/navigation_line_margins"
            android:onClick="showGroups"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/nav_groups_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/navigation_groups_img_content_description"
                android:src="@drawable/ic_action_group" />

            <TextView
                android:id="@+id/nav_groups_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/navigation_margin_to_image"
                android:text="@string/navigation_groups"
                android:textColor="@color/dark_grey" />
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/list_separator"
            android:background="@color/grey" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>