<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:orientation="horizontal" 
        android:longClickable="true">

        <ImageView
            android:id="@+id/subordinate_avatar"
            android:layout_width="@dimen/list_avatar_size"
            android:layout_height="@dimen/list_avatar_size"
            android:layout_margin="@dimen/avatar_margin"
            android:contentDescription="@string/subortinate_avatar_descrip"
            android:src="@drawable/default_user_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.40"
            android:orientation="vertical"
            android:padding="@dimen/list_item_padding" >

            <!-- username -->

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="@dimen/between_task_n_and_text"
                android:textSize="@dimen/username_text_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal" >

                <!-- How many tasks has to do -->

                <TextView
                    android:id="@+id/current_tasks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/between_task_n_and_text"
                    android:textSize="@dimen/user_current_tasks_size" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subordinate_current_task_desc"
                    android:textSize="@dimen/user_current_tasks_size" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="@dimen/list_call"
            android:layout_height="@dimen/list_call"
            android:layout_gravity="right|center_vertical"
            android:contentDescription="@string/subordinate_call_desc"
            android:onClick="call"
            android:src="@drawable/ic_action_call" />
        
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_separator"
        android:background="@color/dark_grey" />

</LinearLayout>